shang_yun_ce_shi

--- a/projects/stm32l475-cmcc-oneos/.config
+++ b/projects/stm32l475-cmcc-oneos/.config
@@ -408,7 +408,22 @@ CONFIG_BSP_USING_RMT_CTL_ATK_RX_PIN=17
 # CONFIG_OS_USING_NAND is not set
 # end of NAND
 
-# CONFIG_OS_USING_DRIVERS_SAMPLES is not set
+CONFIG_OS_USING_DRIVERS_SAMPLES=y
+# CONFIG_OS_KEY_DEMO is not set
+CONFIG_OS_UART_DEMO=y
+# CONFIG_OS_RTC_DEMO is not set
+# CONFIG_OS_WDG_DEMO is not set
+# CONFIG_OS_WWDG_DEMO is not set
+# CONFIG_OS_ADC_DEMO is not set
+# CONFIG_OS_DAC_DEMO is not set
+# CONFIG_OS_CLOCK_DEMO is not set
+# CONFIG_OS_PWM_DEMO is not set
+# CONFIG_OS_PULSE_ENCODER_DEMO is not set
+# CONFIG_OS_SENSORS_DEMO is not set
+# CONFIG_OS_INFRARED_DEMO is not set
+# CONFIG_OS_FAL_TEST_DEMO is not set
+# CONFIG_OS_REQUSR_LPMGR_DEMO is not set
+# CONFIG_OS_GUI_DEMO is not set
 # end of Drivers
 
 #
@@ -438,7 +453,9 @@ CONFIG_BSP_USING_RMT_CTL_ATK_RX_PIN=17
 #
 # MQTT kit
 #
-# CONFIG_OS_USING_ONENET_MQTTS is not set
+CONFIG_OS_USING_ONENET_MQTTS=y
+CONFIG_ONENET_MQTTS_USING_AUTO_REGISTER=y
+# CONFIG_ONENET_MQTTS_USING_TLS is not set
 # end of MQTT kit
 
 #
@@ -520,7 +537,7 @@ CONFIG_ESP8266_DEVICE_NAME="uart1"
 CONFIG_ESP8266_DEVICE_RATE=115200
 CONFIG_ESP8266_RECV_BUFF_LEN=512
 CONFIG_ESP8266_AUTO_CONNECT_AP=y
-CONFIG_ESP8266_CONNECT_SSID="Tenda_56D088"
+CONFIG_ESP8266_CONNECT_SSID="Redmi"
 CONFIG_ESP8266_CONNECT_PASSWORD="12345678"
 CONFIG_ESP8266_USING_GENERAL_OPS=y
 CONFIG_ESP8266_USING_WIFI_OPS=y
@@ -577,7 +594,9 @@ CONFIG_MOLINK_USING_IPV4=y
 #
 # MQTT
 #
-# CONFIG_NET_USING_PAHO_MQTT is not set
+CONFIG_NET_USING_PAHO_MQTT=y
+# CONFIG_MQTT_USING_TLS is not set
+# CONFIG_MQTT_USING_SAMPLE is not set
 # end of MQTT
 
 #
@@ -596,7 +615,8 @@ CONFIG_MOLINK_USING_IPV4=y
 #
 # Socket
 #
-# CONFIG_NET_USING_BSD is not set
+CONFIG_NET_USING_BSD=y
+CONFIG_BSD_USING_MOLINK=y
 # end of Socket
 
 #
@@ -698,7 +718,7 @@ CONFIG_OS_USING_VFS_DEVFS=y
 #
 # cJSON
 #
-# CONFIG_PKG_USING_CJSON is not set
+CONFIG_PKG_USING_CJSON=y
 # end of cJSON
 
 #
