--- a/projects/stm32l475-cmcc-oneos/.config
+++ b/projects/stm32l475-cmcc-oneos/.config
@@ -419,7 +419,7 @@ CONFIG_OS_UART_DEMO=y
 # CONFIG_OS_CLOCK_DEMO is not set
 # CONFIG_OS_PWM_DEMO is not set
 # CONFIG_OS_PULSE_ENCODER_DEMO is not set
-# CONFIG_OS_SENSORS_DEMO is not set
+CONFIG_OS_SENSORS_DEMO=y
 # CONFIG_OS_INFRARED_DEMO is not set
 # CONFIG_OS_FAL_TEST_DEMO is not set
 # CONFIG_OS_REQUSR_LPMGR_DEMO is not set
