实现了wifi断线重连，不再受只能在开机时连wifi的困扰。

--- a/projects/stm32l475-cmcc-oneos/project.uvprojx
+++ b/projects/stm32l475-cmcc-oneos/project.uvprojx
@@ -386,6 +386,11 @@
               <FileType>1</FileType>
               <FilePath>application\main.c</FilePath>
             </File>
+            <File>
+              <FileName>liu_de_long.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\liu_de_long.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
