改写了读传感器与上传部分的代码。成功把上传数据的频率提高到1秒

--- a/projects/stm32l475-cmcc-oneos/.config
+++ b/projects/stm32l475-cmcc-oneos/.config
@@ -409,7 +409,7 @@ CONFIG_BSP_USING_RMT_CTL_ATK_RX_PIN=17
 # end of NAND
 
 CONFIG_OS_USING_DRIVERS_SAMPLES=y
-# CONFIG_OS_KEY_DEMO is not set
+CONFIG_OS_KEY_DEMO=y
 CONFIG_OS_UART_DEMO=y
 # CONFIG_OS_RTC_DEMO is not set
 # CONFIG_OS_WDG_DEMO is not set
@@ -453,7 +453,9 @@ CONFIG_OS_SENSORS_DEMO=y
 #
 # MQTT kit
 #
-# CONFIG_OS_USING_ONENET_MQTTS is not set
+CONFIG_OS_USING_ONENET_MQTTS=y
+CONFIG_ONENET_MQTTS_USING_AUTO_REGISTER=y
+# CONFIG_ONENET_MQTTS_USING_TLS is not set
 # end of MQTT kit
 
 #
