--- a/projects/stm32l475-cmcc-oneos/.config
+++ b/projects/stm32l475-cmcc-oneos/.config
@@ -453,7 +453,9 @@ CONFIG_OS_SENSORS_DEMO=y
 #
 # MQTT kit
 #
-# CONFIG_OS_USING_ONENET_MQTTS is not set
+CONFIG_OS_USING_ONENET_MQTTS=y
+# CONFIG_ONENET_MQTTS_USING_AUTO_REGISTER is not set
+# CONFIG_ONENET_MQTTS_USING_TLS is not set
 # end of MQTT kit
 
 #
@@ -594,7 +596,7 @@ CONFIG_MOLINK_USING_IPV4=y
 #
 CONFIG_NET_USING_PAHO_MQTT=y
 # CONFIG_MQTT_USING_TLS is not set
-CONFIG_MQTT_USING_SAMPLE=y
+# CONFIG_MQTT_USING_SAMPLE is not set
 # end of MQTT
 
 #
@@ -691,7 +693,22 @@ CONFIG_OS_USING_VFS_DEVFS=y
 #
 # OnePos
 #
-# CONFIG_OS_USING_OnePos is not set
+CONFIG_OS_USING_OnePos=y
+# CONFIG_ONEPOS_DEBUG is not set
+# CONFIG_ONEPOS_GNSS_POS is not set
+CONFIG_ONEPOS_WIFI_POS=y
+CONFIG_ONEPOS_WIFI_DEVICE_NAME="esp8266"
+# CONFIG_ONEPOS_CELL_POS is not set
+CONFIG_ONEPOS_DEVICE_ID="1000000078"
+CONFIG_ONEPOS_PASSWORD="b1c379171e773072ba00598230594b07"
+CONFIG_ONEPOS_COMM_REC_BUFF_LEN=2048
+CONFIG_ONEPOS_COMM_SEND_BUFF_LEN=2048
+CONFIG_ONEPOS_DEFAULT_INTERVAL=3
+CONFIG_ONEPOS_DEVICE_REC_POS_INFO=y
+CONFIG_ONEPOS_REC_SUB_MSG_TIMEOUT=2900
+# CONFIG_ONEPOS_SUPP_REMOTE_CONF is not set
+CONFIG_ONEPOS_DEFAULT_SEV_TYPE=0
+# CONFIG_ONEPOS_CMD is not set
 # end of OnePos
 
 #
@@ -728,7 +745,11 @@ CONFIG_PKG_USING_CJSON=y
 #
 # NTP
 #
-# CONFIG_PKG_USING_NTP is not set
+CONFIG_PKG_USING_NTP=y
+CONFIG_NETUTILS_NTP_TIMEZONE=8
+CONFIG_NETUTILS_NTP_HOSTNAME="cn.ntp.org.cn"
+CONFIG_NETUTILS_NTP_HOSTNAME2="ntp.ntsc.ac.cn"
+CONFIG_NETUTILS_NTP_HOSTNAME3="edu.ntp.org.cn"
 # end of NTP
 
 #
