--- a/projects/stm32l475-cmcc-oneos/project.uvprojx
+++ b/projects/stm32l475-cmcc-oneos/project.uvprojx
@@ -335,9 +335,9 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>OS_USING_ARM_LIBC, STM32L475xx, USE_HAL_DRIVER</Define>
+              <Define>USE_HAL_DRIVER, STM32L475xx, OS_USING_ARM_LIBC</Define>
               <Undefine></Undefine>
-              <IncludePath>.;application;..\..\drivers\audio;board;board\CubeMX_Config\Inc;board\ports;..\..\thirdparty\cJSON-v1.7.12;..\..\common\include;..\..\arch\arm\common;..\..\arch\arm\cortex-m4;..\..\components\diagnose\include;..\..\drivers\driver_test;..\..\drivers;..\..\drivers\bus;..\..\drivers\can;..\..\drivers\dma;..\..\drivers\fal;..\..\drivers\hwcrypto;.;..\..\drivers\i2c;..\..\drivers\misc;..\..\drivers\pin;..\..\drivers\rtc;..\..\drivers\serial;..\..\drivers\spi;..\..\drivers\spi\sfud\inc;..\..\drivers\timer;..\..\drivers\usb\usbdevice;..\..\drivers\watchdog;..\..\components\fs\include;..\..\components\fs\include\devfs;..\..\components\fs\include\fatfs;..\..\drivers\graphic;..\..\drivers\hal\st\devices;..\..\drivers\hal\st\drivers;..\..\drivers\hal\st\drivers\config;..\..\drivers\hal\st\drivers\drv_flash;..\..\drivers\hal\st\STM32L4xx_HAL\STM32L4xx_HAL_Driver\Inc;..\..\drivers\hal\st\STM32L4xx_HAL\CMSIS\Device\ST\STM32L4xx\Include;..\..\drivers\hal\st\STM32L4xx_HAL\CMSIS\Include;..\..\drivers\infrared;..\..\kernel\include;..\..\kernel\include\extend;..\..\libc\include;..\..\libc\include\armlibc;..\..\components\net\molink\core\include;..\..\components\net\molink\api\include;..\..\components\net\molink\parser\include;..\..\components\net\molink\module\esp8266\include;..\..\thirdparty\mpu6xxx\inc;..\..\components\cloud\onenet\mqtt-kit\authorization;..\..\components\cloud\onenet\mqtt-kit\cert;..\..\components\cloud\onenet\mqtt-kit\mqtts_device;..\..\components\net\protocols\pahomqtt-v1.1.0\MQTTClient-OneOS\src;..\..\components\net\protocols\pahomqtt-v1.1.0\MQTTPacket\src;..\..\drivers\sensors;..\..\components\shell\include;..\..\components\net\socket\include;..\..\components\net\socket\include\sys_socket;..\..\components\net\socket\include\vfs_net;..\..\components\net\tools\include</IncludePath>
+              <IncludePath>.;application;..\..\drivers\audio;board;board\CubeMX_Config\Inc;board\ports;..\..\thirdparty\cJSON-v1.7.12;..\..\common\include;..\..\arch\arm\common;..\..\arch\arm\cortex-m4;..\..\components\diagnose\include;..\..\drivers\driver_test;..\..\drivers;..\..\drivers\bus;..\..\drivers\can;..\..\drivers\dma;..\..\drivers\fal;..\..\drivers\hwcrypto;.;..\..\drivers\i2c;..\..\drivers\misc;..\..\drivers\pin;..\..\drivers\rtc;..\..\drivers\serial;..\..\drivers\spi;..\..\drivers\spi\sfud\inc;..\..\drivers\timer;..\..\drivers\usb\usbdevice;..\..\drivers\watchdog;..\..\components\fs\include;..\..\components\fs\include\devfs;..\..\components\fs\include\fatfs;..\..\drivers\graphic;..\..\drivers\hal\st\devices;..\..\drivers\hal\st\drivers;..\..\drivers\hal\st\drivers\config;..\..\drivers\hal\st\drivers\drv_flash;..\..\drivers\hal\st\STM32L4xx_HAL\STM32L4xx_HAL_Driver\Inc;..\..\drivers\hal\st\STM32L4xx_HAL\CMSIS\Device\ST\STM32L4xx\Include;..\..\drivers\hal\st\STM32L4xx_HAL\CMSIS\Include;..\..\drivers\infrared;..\..\kernel\include;..\..\kernel\include\extend;..\..\libc\include;..\..\libc\include\armlibc;..\..\components\net\molink\core\include;..\..\components\net\molink\api\include;..\..\components\net\molink\parser\include;..\..\components\net\molink\module\esp8266\include;..\..\thirdparty\mpu6xxx\inc;..\..\thirdparty\netutils-v1.0.0\ntp;..\..\components\cloud\onenet\mqtt-kit\authorization;..\..\components\cloud\onenet\mqtt-kit\cert;..\..\components\cloud\onenet\mqtt-kit\mqtts_device;..\..\components\position\include;..\..\components\net\protocols\pahomqtt-v1.1.0\MQTTClient-OneOS\src;..\..\components\net\protocols\pahomqtt-v1.1.0\MQTTPacket\src;..\..\drivers\sensors;..\..\components\shell\include;..\..\components\net\socket\include;..\..\components\net\socket\include\sys_socket;..\..\components\net\socket\include\vfs_net;..\..\components\net\tools\include</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -385,16 +385,6 @@
               <FileName>main.c</FileName>
               <FileType>1</FileType>
               <FilePath>application\main.c</FilePath>
-            </File>
-            <File>
-              <FileName>liu_de_long.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\liu_de_long.h</FilePath>
-            </File>
-            <File>
-              <FileName>liu_mqtts_func.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\liu_mqtts_func.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -1533,6 +1523,16 @@
           </Files>
         </Group>
         <Group>
+          <GroupName>netutils</GroupName>
+          <Files>
+            <File>
+              <FileName>ntp.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\thirdparty\netutils-v1.0.0\ntp\ntp.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
           <GroupName>onenet</GroupName>
           <Files>
             <File>
@@ -1564,6 +1564,26 @@
               <FileName>onenet_mqtts.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\components\cloud\onenet\mqtt-kit\mqtts_device\onenet_mqtts.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>onepos</GroupName>
+          <Files>
+            <File>
+              <FileName>onepos_wifi_loca.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\components\position\source\wifi_src\onepos_wifi_loca.c</FilePath>
+            </File>
+            <File>
+              <FileName>onepos_src_info.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\components\position\source\onepos_src_info.c</FilePath>
+            </File>
+            <File>
+              <FileName>onepos_interface.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\components\position\source\onepos_interface.c</FilePath>
             </File>
           </Files>
         </Group>
